# AREDL_Coordinator

./: .gitignore  404.html  CNAME  Makefile  README.md  index.html  robots.txt  wrangler.jsonc
assets/: index-06khR10d.js  index-1lfSam8K.css  index-8ajc-ogq.js  index-A-Wlf_J2.js  index-B-YJkLC5.js  index-B3-C5zmz.css  index-B4kO6gIE.css  index-B69m3oZa.js  index-BANEwUDe.js  index-BAxypLUL.css  index-BJGkXi07.css  index-BOV0RoBq.css  index-BRXBd9ts.js  index-BTDQREtx.js  index-BTU5tDIA.js  index-BWnjmN5n.js  index-BhJcMz_G.css  index-BlwBoOmi.js  index-Bn6-6haH.css  index-BqHXs7dx.css  index-Bw2gO_XW.js  index-BxbgoemW.js  index-C2X-qVNw.css  index-C6XBg-ct.js  (+39 more)
backend/: .dev.vars.example  .local-db-seed.sql  Cargo.toml  DEPENDENCIES.md  package-lock.json  package.json  wrangler.toml
backend/migrations/: 0001_init.sql  0002_claims_align.sql  0003_supposedly_completed.sql  0004_multi_claim_per_level.sql  0005_user_preferences.sql
backend/scripts/: check-migrations.sh
backend/src/: cors.rs  env.rs  lib.rs  stats.rs
backend/src/aredl/: cache.rs  client.rs  mod.rs  profile.rs  types.rs
backend/src/auth/: db.rs  discord.rs  guard.rs  jwt.rs  mod.rs  session.rs
backend/src/board/: aggregate.rs  cache.rs  mod.rs  types.rs
backend/src/claims/: db.rs  mod.rs  priority.rs  response.rs  sql_exec.rs  sql_validate.rs
backend/src/preferences/: db.rs  filters.rs  hardest.rs  mod.rs
backend/src/routes/: admin.rs  aredl.rs  auth.rs  board.rs  claims.rs  health.rs  me.rs  mod.rs  preferences.rs  showcase.rs
backend/src/routes/aredl/: levels.rs  mod.rs  ping.rs
(+86 files in other folders)
