[package]
name = "aredl-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "js"] }

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 16
strip = true
